objects/tffa__CollateralCharge__c.object
<CustomObject>
    <description>Captures the charge details of the underlying asset. A collateral charge is a method of securing a loan against the asset.</description>
    <fields>
        <fullName>tffa__Asset__c</fullName>
        <description>Reference to asset object for which current charge is captured</description>
        <label>Asset</label>
        <referenceTo>tffa__Asset__c</referenceTo>
        <relationshipLabel>Charges</relationshipLabel>
        <relationshipName>Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__CollateralArrangement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to Collateral Arrangement</description>
        <label>Collateral Arrangement</label>
        <referenceTo>tffa__CollateralArrangement__c</referenceTo>
        <relationshipLabel>Collateral Charges</relationshipLabel>
        <relationshipName>CollateralCharges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__EndDate__c</fullName>
        <description>End date for the collateral charge</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsRegistrationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the charge registration is required</description>
        <label>Is registration required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfUnits__c</fullName>
        <description>Number of units considered in the collateral charge</description>
        <label>Number of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RegistrationAmount__c</fullName>
        <description>Captures the charge registration amount</description>
        <label>Registration amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__RegistrationAuthority__c</fullName>
        <description>Captures the name of the authority registering the charge</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Registration authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__RegistrationNumber__c</fullName>
        <description>Captures the charge registration number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Registration number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source system id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this charge if it sourced from a external system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__StartDate__c</fullName>
        <description>Start date of the collateral charge</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Indicates the status of the collateral charge</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralChargeStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Indicates the Collateral charge Type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CollateralChargeType</valueSetName>
        </valueSet>
    </fields>
    <label>Collateral Charge</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CollateralCharge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CollateralCharges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>